src/yw-cli/YW_CLI_Parser.cpp

// Generated from YW_CLI_.g4 by ANTLR 4.7


#include "YW_CLI_Listener.h"

#include "YW_CLI_Parser.h"


using namespace antlrcpp;
using namespace yw;
using namespace antlr4;

YW_CLI_Parser::YW_CLI_Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

YW_CLI_Parser::~YW_CLI_Parser() {
  delete _interpreter;
}

std::string YW_CLI_Parser::getGrammarFileName() const {
  return "YW_CLI_.g4";
}

const std::vector<std::string>& YW_CLI_Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& YW_CLI_Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CommandLineContext ------------------------------------------------------------------

YW_CLI_Parser::CommandLineContext::CommandLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CLI_Parser::ProgramContext* YW_CLI_Parser::CommandLineContext::program() {
  return getRuleContext<YW_CLI_Parser::ProgramContext>(0);
}

std::vector<YW_CLI_Parser::PflagContext *> YW_CLI_Parser::CommandLineContext::pflag() {
  return getRuleContexts<YW_CLI_Parser::PflagContext>();
}

YW_CLI_Parser::PflagContext* YW_CLI_Parser::CommandLineContext::pflag(size_t i) {
  return getRuleContext<YW_CLI_Parser::PflagContext>(i);
}

YW_CLI_Parser::CommandContext* YW_CLI_Parser::CommandLineContext::command() {
  return getRuleContext<YW_CLI_Parser::CommandContext>(0);
}

std::vector<tree::TerminalNode *> YW_CLI_Parser::CommandLineContext::NEWLINE() {
  return getTokens(YW_CLI_Parser::NEWLINE);
}

tree::TerminalNode* YW_CLI_Parser::CommandLineContext::NEWLINE(size_t i) {
  return getToken(YW_CLI_Parser::NEWLINE, i);
}

std::vector<tree::TerminalNode *> YW_CLI_Parser::CommandLineContext::SPACE() {
  return getTokens(YW_CLI_Parser::SPACE);
}

tree::TerminalNode* YW_CLI_Parser::CommandLineContext::SPACE(size_t i) {
  return getToken(YW_CLI_Parser::SPACE, i);
}

std::vector<YW_CLI_Parser::ArgumentContext *> YW_CLI_Parser::CommandLineContext::argument() {
  return getRuleContexts<YW_CLI_Parser::ArgumentContext>();
}

YW_CLI_Parser::ArgumentContext* YW_CLI_Parser::CommandLineContext::argument(size_t i) {
  return getRuleContext<YW_CLI_Parser::ArgumentContext>(i);
}

std::vector<YW_CLI_Parser::ConfigContext *> YW_CLI_Parser::CommandLineContext::config() {
  return getRuleContexts<YW_CLI_Parser::ConfigContext>();
}

YW_CLI_Parser::ConfigContext* YW_CLI_Parser::CommandLineContext::config(size_t i) {
  return getRuleContext<YW_CLI_Parser::ConfigContext>(i);
}


size_t YW_CLI_Parser::CommandLineContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleCommandLine;
}

void YW_CLI_Parser::CommandLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommandLine(this);
}

void YW_CLI_Parser::CommandLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommandLine(this);
}

YW_CLI_Parser::CommandLineContext* YW_CLI_Parser::commandLine() {
  CommandLineContext *_localctx = _tracker.createInstance<CommandLineContext>(_ctx, getState());
  enterRule(_localctx, 0, YW_CLI_Parser::RuleCommandLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(24);
    program();
    setState(33);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(26); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(25);
          match(YW_CLI_Parser::SPACE);
          setState(28); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == YW_CLI_Parser::SPACE);
        setState(30);
        pflag(); 
      }
      setState(35);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(56);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == YW_CLI_Parser::SPACE) {
      setState(37); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(36);
        match(YW_CLI_Parser::SPACE);
        setState(39); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == YW_CLI_Parser::SPACE);
      setState(41);
      command();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == YW_CLI_Parser::SPACE) {
        setState(43); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(42);
          match(YW_CLI_Parser::SPACE);
          setState(45); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == YW_CLI_Parser::SPACE);
        setState(49);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          setState(47);
          argument();
          break;
        }

        case 2: {
          setState(48);
          config();
          break;
        }

        }
        setState(55);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YW_CLI_Parser::NEWLINE) {
      setState(58);
      match(YW_CLI_Parser::NEWLINE);
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

YW_CLI_Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* YW_CLI_Parser::ProgramContext::WORD() {
  return getToken(YW_CLI_Parser::WORD, 0);
}


size_t YW_CLI_Parser::ProgramContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleProgram;
}

void YW_CLI_Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void YW_CLI_Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

YW_CLI_Parser::ProgramContext* YW_CLI_Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, YW_CLI_Parser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(YW_CLI_Parser::WORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommandContext ------------------------------------------------------------------

YW_CLI_Parser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* YW_CLI_Parser::CommandContext::WORD() {
  return getToken(YW_CLI_Parser::WORD, 0);
}


size_t YW_CLI_Parser::CommandContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleCommand;
}

void YW_CLI_Parser::CommandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand(this);
}

void YW_CLI_Parser::CommandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand(this);
}

YW_CLI_Parser::CommandContext* YW_CLI_Parser::command() {
  CommandContext *_localctx = _tracker.createInstance<CommandContext>(_ctx, getState());
  enterRule(_localctx, 4, YW_CLI_Parser::RuleCommand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(YW_CLI_Parser::WORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentContext ------------------------------------------------------------------

YW_CLI_Parser::ArgumentContext::ArgumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* YW_CLI_Parser::ArgumentContext::WORD() {
  return getToken(YW_CLI_Parser::WORD, 0);
}


size_t YW_CLI_Parser::ArgumentContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleArgument;
}

void YW_CLI_Parser::ArgumentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgument(this);
}

void YW_CLI_Parser::ArgumentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgument(this);
}

YW_CLI_Parser::ArgumentContext* YW_CLI_Parser::argument() {
  ArgumentContext *_localctx = _tracker.createInstance<ArgumentContext>(_ctx, getState());
  enterRule(_localctx, 6, YW_CLI_Parser::RuleArgument);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(YW_CLI_Parser::WORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PflagContext ------------------------------------------------------------------

YW_CLI_Parser::PflagContext::PflagContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CLI_Parser::HelpflagContext* YW_CLI_Parser::PflagContext::helpflag() {
  return getRuleContext<YW_CLI_Parser::HelpflagContext>(0);
}

YW_CLI_Parser::VersionflagContext* YW_CLI_Parser::PflagContext::versionflag() {
  return getRuleContext<YW_CLI_Parser::VersionflagContext>(0);
}


size_t YW_CLI_Parser::PflagContext::getRuleIndex() const {
  return YW_CLI_Parser::RulePflag;
}

void YW_CLI_Parser::PflagContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPflag(this);
}

void YW_CLI_Parser::PflagContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPflag(this);
}

YW_CLI_Parser::PflagContext* YW_CLI_Parser::pflag() {
  PflagContext *_localctx = _tracker.createInstance<PflagContext>(_ctx, getState());
  enterRule(_localctx, 8, YW_CLI_Parser::RulePflag);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YW_CLI_Parser::T__0:
      case YW_CLI_Parser::T__1: {
        enterOuterAlt(_localctx, 1);
        setState(70);
        helpflag();
        break;
      }

      case YW_CLI_Parser::T__2:
      case YW_CLI_Parser::T__3: {
        enterOuterAlt(_localctx, 2);
        setState(71);
        versionflag();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HelpflagContext ------------------------------------------------------------------

YW_CLI_Parser::HelpflagContext::HelpflagContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t YW_CLI_Parser::HelpflagContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleHelpflag;
}

void YW_CLI_Parser::HelpflagContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHelpflag(this);
}

void YW_CLI_Parser::HelpflagContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHelpflag(this);
}

YW_CLI_Parser::HelpflagContext* YW_CLI_Parser::helpflag() {
  HelpflagContext *_localctx = _tracker.createInstance<HelpflagContext>(_ctx, getState());
  enterRule(_localctx, 10, YW_CLI_Parser::RuleHelpflag);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _la = _input->LA(1);
    if (!(_la == YW_CLI_Parser::T__0

    || _la == YW_CLI_Parser::T__1)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionflagContext ------------------------------------------------------------------

YW_CLI_Parser::VersionflagContext::VersionflagContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t YW_CLI_Parser::VersionflagContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleVersionflag;
}

void YW_CLI_Parser::VersionflagContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVersionflag(this);
}

void YW_CLI_Parser::VersionflagContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVersionflag(this);
}

YW_CLI_Parser::VersionflagContext* YW_CLI_Parser::versionflag() {
  VersionflagContext *_localctx = _tracker.createInstance<VersionflagContext>(_ctx, getState());
  enterRule(_localctx, 12, YW_CLI_Parser::RuleVersionflag);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _la = _input->LA(1);
    if (!(_la == YW_CLI_Parser::T__2

    || _la == YW_CLI_Parser::T__3)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigContext ------------------------------------------------------------------

YW_CLI_Parser::ConfigContext::ConfigContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CLI_Parser::CflagContext* YW_CLI_Parser::ConfigContext::cflag() {
  return getRuleContext<YW_CLI_Parser::CflagContext>(0);
}

YW_CLI_Parser::ConfigNameContext* YW_CLI_Parser::ConfigContext::configName() {
  return getRuleContext<YW_CLI_Parser::ConfigNameContext>(0);
}

std::vector<tree::TerminalNode *> YW_CLI_Parser::ConfigContext::SPACE() {
  return getTokens(YW_CLI_Parser::SPACE);
}

tree::TerminalNode* YW_CLI_Parser::ConfigContext::SPACE(size_t i) {
  return getToken(YW_CLI_Parser::SPACE, i);
}

YW_CLI_Parser::ConfigValueContext* YW_CLI_Parser::ConfigContext::configValue() {
  return getRuleContext<YW_CLI_Parser::ConfigValueContext>(0);
}


size_t YW_CLI_Parser::ConfigContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleConfig;
}

void YW_CLI_Parser::ConfigContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfig(this);
}

void YW_CLI_Parser::ConfigContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfig(this);
}

YW_CLI_Parser::ConfigContext* YW_CLI_Parser::config() {
  ConfigContext *_localctx = _tracker.createInstance<ConfigContext>(_ctx, getState());
  enterRule(_localctx, 14, YW_CLI_Parser::RuleConfig);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YW_CLI_Parser::T__5:
      case YW_CLI_Parser::T__6:
      case YW_CLI_Parser::T__7: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        cflag();

        setState(80); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(79);
          match(YW_CLI_Parser::SPACE);
          setState(82); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == YW_CLI_Parser::SPACE);

        setState(84);
        configName();
        setState(87);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == YW_CLI_Parser::T__4) {
          setState(85);
          match(YW_CLI_Parser::T__4);
          setState(86);
          configValue();
        }
        break;
      }

      case YW_CLI_Parser::WORD: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        configName();
        setState(90);
        match(YW_CLI_Parser::T__4);
        setState(91);
        configValue();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CflagContext ------------------------------------------------------------------

YW_CLI_Parser::CflagContext::CflagContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t YW_CLI_Parser::CflagContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleCflag;
}

void YW_CLI_Parser::CflagContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCflag(this);
}

void YW_CLI_Parser::CflagContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCflag(this);
}

YW_CLI_Parser::CflagContext* YW_CLI_Parser::cflag() {
  CflagContext *_localctx = _tracker.createInstance<CflagContext>(_ctx, getState());
  enterRule(_localctx, 16, YW_CLI_Parser::RuleCflag);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << YW_CLI_Parser::T__5)
      | (1ULL << YW_CLI_Parser::T__6)
      | (1ULL << YW_CLI_Parser::T__7))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigNameContext ------------------------------------------------------------------

YW_CLI_Parser::ConfigNameContext::ConfigNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* YW_CLI_Parser::ConfigNameContext::WORD() {
  return getToken(YW_CLI_Parser::WORD, 0);
}


size_t YW_CLI_Parser::ConfigNameContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleConfigName;
}

void YW_CLI_Parser::ConfigNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigName(this);
}

void YW_CLI_Parser::ConfigNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigName(this);
}

YW_CLI_Parser::ConfigNameContext* YW_CLI_Parser::configName() {
  ConfigNameContext *_localctx = _tracker.createInstance<ConfigNameContext>(_ctx, getState());
  enterRule(_localctx, 18, YW_CLI_Parser::RuleConfigName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(YW_CLI_Parser::WORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigValueContext ------------------------------------------------------------------

YW_CLI_Parser::ConfigValueContext::ConfigValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YW_CLI_Parser::UnquotedValueContext* YW_CLI_Parser::ConfigValueContext::unquotedValue() {
  return getRuleContext<YW_CLI_Parser::UnquotedValueContext>(0);
}

std::vector<tree::TerminalNode *> YW_CLI_Parser::ConfigValueContext::SQ() {
  return getTokens(YW_CLI_Parser::SQ);
}

tree::TerminalNode* YW_CLI_Parser::ConfigValueContext::SQ(size_t i) {
  return getToken(YW_CLI_Parser::SQ, i);
}

std::vector<tree::TerminalNode *> YW_CLI_Parser::ConfigValueContext::DQ() {
  return getTokens(YW_CLI_Parser::DQ);
}

tree::TerminalNode* YW_CLI_Parser::ConfigValueContext::DQ(size_t i) {
  return getToken(YW_CLI_Parser::DQ, i);
}


size_t YW_CLI_Parser::ConfigValueContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleConfigValue;
}

void YW_CLI_Parser::ConfigValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConfigValue(this);
}

void YW_CLI_Parser::ConfigValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConfigValue(this);
}

YW_CLI_Parser::ConfigValueContext* YW_CLI_Parser::configValue() {
  ConfigValueContext *_localctx = _tracker.createInstance<ConfigValueContext>(_ctx, getState());
  enterRule(_localctx, 20, YW_CLI_Parser::RuleConfigValue);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YW_CLI_Parser::WORD: {
        enterOuterAlt(_localctx, 1);
        setState(99);
        unquotedValue();
        break;
      }

      case YW_CLI_Parser::SQ: {
        enterOuterAlt(_localctx, 2);
        setState(100);
        match(YW_CLI_Parser::SQ);
        setState(101);
        unquotedValue();
        setState(102);
        match(YW_CLI_Parser::SQ);
        break;
      }

      case YW_CLI_Parser::DQ: {
        enterOuterAlt(_localctx, 3);
        setState(104);
        match(YW_CLI_Parser::DQ);
        setState(105);
        unquotedValue();
        setState(106);
        match(YW_CLI_Parser::DQ);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnquotedValueContext ------------------------------------------------------------------

YW_CLI_Parser::UnquotedValueContext::UnquotedValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> YW_CLI_Parser::UnquotedValueContext::WORD() {
  return getTokens(YW_CLI_Parser::WORD);
}

tree::TerminalNode* YW_CLI_Parser::UnquotedValueContext::WORD(size_t i) {
  return getToken(YW_CLI_Parser::WORD, i);
}

std::vector<tree::TerminalNode *> YW_CLI_Parser::UnquotedValueContext::SPACE() {
  return getTokens(YW_CLI_Parser::SPACE);
}

tree::TerminalNode* YW_CLI_Parser::UnquotedValueContext::SPACE(size_t i) {
  return getToken(YW_CLI_Parser::SPACE, i);
}


size_t YW_CLI_Parser::UnquotedValueContext::getRuleIndex() const {
  return YW_CLI_Parser::RuleUnquotedValue;
}

void YW_CLI_Parser::UnquotedValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YW_CLI_Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnquotedValue(this);
}
